--- a/header.tex
+++ b/header.tex
@@ -128,7 +128,7 @@ urlcolor=[rgb]{.09 .29 .54}}
 
 \def\tr{\mathrm{tr}}
 \def\Path{\mathrm{Path}}
-\def\hier{\mathrm{Hier}}
+\def\hier{\mathbf{Hier}}
 \def\Vertex{\mathrm{Vertex}}
 \def\adj{\mathrm{adj}}
 \def\wprod{\mathbf{wp}}
