--- a/tex/supplement.tex
+++ b/tex/supplement.tex
@@ -278,7 +278,7 @@ The relationship between connectivity and robustness for two component systems i
 % \subsection{Cycle number and connectivity classify robust systems}
 The combination of connectivity and cycle number as shown in \reffigconnectcycle3D3x3 provides a better classification of the dependence of robustness upon network topology. Here the robustness of three component systems with a given number of cycles, increases monotonically with connectivity. The network with the highest robustness for three component systems is that of \reffigscc (top panel). This network is the most hierarchical of all three component systems in the sense that it represents a total ordering of the components of the network and its adjacency matrix also shown in \reffigscc (top panel) has a block triangular structure.
 
-This observation suggested that graph edit distance from \reffigscc (top panel), hierarchy, might provide a better characterization of system robustness. \reffigrobusthierarchy shows system robustness as a function of hierarchy, where the most hierarchical system has a hierarchy of 0. There is a monotonic correlation between the upper bound of robustness and hierarchy. \reffigconnectdist3D3x3 shows system robustness as a function of both hierarchy and connectivity. The monotonic correlation between hierarchy and robustness is refined by an underlying correlation between robustness and connectivity analogous to that of \reffigconnectcycle3D3x3.
+This observation suggested that graph edit distance from \reffigscc (top panel), hierarchy, might provide a better characterization of dynamical robustness. \reffigrobusthierarchy shows dynamical robustness as a function of hierarchy, where the most hierarchical system has a hierarchy of 0. There is a monotonic correlation between the upper bound of robustness and hierarchy. \reffigconnectdist3D3x3 shows dynamical robustness as a function of both hierarchy and connectivity. The monotonic correlation between hierarchy and robustness is refined by an underlying correlation between robustness and connectivity analogous to that of \reffigconnectcycle3D3x3.
 
 \subsection{Component decomposition, hierarchy, and the symmetries of robustness}
 
