--- a/paper.tex
+++ b/paper.tex
@@ -48,13 +48,13 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 % \listoftodos
 % \tableofcontents
 
-\section{Introduction}
+% \section{Introduction}
 \input{tex/introduction}
 
-\section{Results}
+% \section{Results}
 \input{tex/results}
 
-\section{Discussion}
+% \section{Discussion}
 \input{tex/discussion}
 
 \section{Acknowlegements}
