--- a/tex/figuressupp.tex
+++ b/tex/figuressupp.tex
@@ -21,7 +21,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.8\columnwidth]{fig/cycle3x3.pdf}
-\caption{{\bf System robustness as a function of number of cycles.} }
+\caption{{\bf dynamical robustness as a function of number of cycles.} }
 \label{fig:cycle3x3}
 \end{figure}
 
