--- a/paper.tex
+++ b/paper.tex
@@ -36,6 +36,8 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 
 % \begin{multicols}{2}
 
+\begin{bibunit}[naturemag]
+
 % {\begin{quote} \bf
 % \input{tex/abstract-cited}
 % \end{quote}}
@@ -59,12 +61,11 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 
 \section{Acknowlegements}
 \input{tex/acknowledgements}
-
 % \pagebreak
-
 {\footnotesize
-\bibliographystyle{pnas}
-\bibliography{bib/books,bib/papers}
+% \bibliographystyle{naturemag}
+% \bibliography{bib/books,bib/papers}
+\putbib[bib/books,bib/papers]
 }
 
 % \end{multicols}
@@ -73,15 +74,24 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 \FloatBarrier
 \section{Figure Legends}
 \input{tex/figures}
+\end{bibunit}
 
 \pagebreak
 \FloatBarrier
+
+\begin{bibunit}[naturemag]
 
 \beginsupplement
 \setcounter{secnumdepth}{4}
 \section{Supplementary Material}
 
 \input{tex/supplement}
+
+{\footnotesize
+% \bibliographystyle{naturemag}
+% \bibliography{bib/books,bib/papers}
+\putbib[bib/books,bib/papers]
+}
 \pagebreak
 
 \input{tex/figuressupp}
@@ -96,7 +106,7 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 
 % \input{tex/tablewithgraphs}
 % \input{tex/extra}
-
+\end{bibunit}
 \end{document}
 
 %------------------------------------------------------------------------------
