clarify interpretation of robustness expression

--- a/tex/results.tex
+++ b/tex/results.tex
@@ -5,7 +5,7 @@ The dynamical model given in terms of a system of differential equations for any
 
 The network architecture can be represented in terms of an adjacency matrix and further abstracted by mapping the interaction graph to the network of strongly connected components (SCCs, see Supplementary Information) (\reffighiertransformations). This map from the interaction graph of a biological network, referred to as $\hier$, has a collection of symmetries shown in \reffighiertransformations. These three symmetries represent transformations that can be performed on the interaction graph that do not change the network of SCCs to which it is associated \reffigscc. Two of these three are also symmetries with respect to dynamical robustness. \ref{fig:robustnesssymmetries} shows an example of these symmetries applied to a specific interaction graph.
 
-We have derived an analytical expression for dynamical robustness in terms of the SCCs and links between them of the interaction graph of a given dynamical system (Supplementary Material, \ref{eq:sccrobustness}). Examining this expression proves that networks maximizing the number of links between SCCs, will also maximize dynamical robustness (Supplementary Material). This implies that the interaction graphs for systems that are the most robust will also maximize the overall number of SCCs. This analytical result predicts that any biological network whose associated dynamical system has the interaction graph \reffighiertransformations $\,$ top will be more robust than those associated to any of the other interaction graphs in \reffighiertransformations. Because this result is purely topological in nature, it does not depend at all upon any particular details such as the probability distribution from which the component interaction strengths are sampled or the size of the system. The result that dynamical robustness is correlated with system hierarchy therefore applies to an even broader class of dynamical systems than the particular random ensembles we have studied directly.
+We have derived an analytical expression for dynamical robustness as a weighted average of the robustness of the SCCs and the number of links between them that applies to the interaction graph associated to a given dynamical system (Supplementary Material, \ref{eq:sccrobustness}). Examining this expression proves that networks maximizing the number of links between SCCs, will also maximize dynamical robustness (Supplementary Material). This implies that the interaction graphs for systems that are the most robust will also maximize the overall number of SCCs. This analytical result predicts that any biological network whose associated dynamical system has the interaction graph \reffighiertransformations $\,$ top will be more robust than those associated to any of the other interaction graphs in \reffighiertransformations. Because this result is purely topological in nature, it does not depend at all upon any particular details such as the probability distribution from which the component interaction strengths are sampled or the size of the system. The result that dynamical robustness is correlated with system hierarchy therefore applies to an even broader class of dynamical systems than the particular random ensembles we have studied directly.
 
 To test this prediction, we computed the probability distribution of stability and dynamical robustness relative to biological network architecture for ensembles of systems having two or three interacting components (see \ref{tab:structstabmat} and \ref{tab:structstabmat3}). For all of these, we found that robustness is correlated with connectivity, but that the most robust systems have intermediate connectivity for a given network size (\reffigrobustconnect). Accounting for the number of cycles in a network architecture reveals a strong correlation between robustness and connectivity that was hidden when networks with any number of cycles were considered together (\reffigconnectcycle3D3x3). While the most hierarchical network architecture will always lack cycles altogether, cycle number alone is clearly insufficient to account for robustness as the members of each class span nearly the entire range of possible robustness values. Consistent with our analysis of the symmetries of robustness, we found that the most hierarchical network architecture is the most robust (\reffigrobusthierarchy). Moreover, if we consider hierarchy partitioned by connectivity, we find that there is a monotonic increase in robustness following any line of increasing hierarchy in \reffigconnectdist3D3x3.
 
