update modsccsym fig with explicit robustness computations

--- a/header.tex
+++ b/header.tex
@@ -223,8 +223,8 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\length{\mathbf{len}}
 \def\connectivity{\mathrm{d}}
 \def\reffigexamplesystemmodules{\ref{fig:modsccsym}A}
-\def\reffighiertransformations{\ref{fig:modsccsym}B}
-\def\reffigscc{\ref{fig:modsccsym}C}
+\def\reffigscc{\ref{fig:modsccsym}B}
+\def\reffighiertransformations{\ref{fig:modsccsym}C}
 \def\reffigrobustconnect{\ref{fig:combined}A}
 \def\reffigrobusthierarchy{\ref{fig:combined}B}
 \def\reffigconnectcycle3D3x3{\ref{fig:combined}C}
