--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,6 +1,13 @@
 %!TEX root = ../paper.tex
-The relationship between structure and function is fundamental to networks at every level of the biological hierarchy. Equally fundamental is the ability of systems to persist over long periods of time, which is dependent upon their dynamical robustness. Here we have demonstrated a structure-function relationship wherein biological networks that are more hierarchical are more robust and thus more likely to persist in the evolutionary process. Moreover, this result is formulated at a level of abstraction that allows its conclusions to apply independently to each of these levels.
+% Our development suggests two predictions that could be used to test the theory described here. One is that,
+Our theory predicts that any ensemble of systems where robustness has been positively selected over a sufficiently long period of time, should exhibit a bias toward more hierarchical network topologies. At the ecological level, a system subjected to the environmental stress of overfishing, which may imply selection for robustness, has been demonstrated to exhibit such a bias toward more hierarchical network architectures \cite{Bascompte2005}. In the short term, this prediction may be further evaluated at the levels of both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their robustness \cite{Zhao2006,Bhardwaj2010,Colm}.
+%The other prediction of the theory outlined here that may be able to be checked is the converse statement that an ensemble of systems demonstrating a positive or negative bias in their network topology toward hierarchy may have been under selection for, or respectively against, robustness. Of course, in this case, factors other than selection for robustness would not be ruled out by this analysis alone.
+In the long term, this prediction may be evaluated using experimental evolution by comparing the degree of hierarchy that emerges in the evolution of gene regulatory network topology in the context of both static and fluctuating environments that differentially select for robustness \cite{Leroi1994}.
 
-Our development suggests two predictions that could be used to test the theory described here. One is that, if this theory is correct, any ensemble of systems where robustness has been positively selected over a sufficiently long period of time, should exhibit a bias toward more hierarchical network topologies. In the short term, this prediction may be checked by looking at both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their robustness \cite{Zhao2006,Bhardwaj2010,Colm}. The other prediction of the theory outlined here that may be able to be checked is the converse statement that an ensemble of systems demonstrating a positive or negative bias in their network topology toward hierarchy may have been under selection for, or respectively against, robustness. Of course, in this case, factors other than selection for robustness would not be ruled out by this analysis alone.  In the long term, each of these predictions may be evaluated using experimental evolution by tracking the evolution of gene regulatory network topology in the context of environmental perturbations \cite{Leroi1994}.
+%The fact that such a relationship exists has the potential to unify our understanding of biological networks.
+In order to further this work from a theoretical perspective, it will be necessary to deepen our understanding of the relationship between dynamical robustness and the underlying network topology.
+%One approach is to attempt to compute robustness for systems of larger size. Using existing methods, this would require large-scale Monte Carlo simulations. However,
+It may be possible to prove a bound on the robustness of individual strongly connected components, which could provide more definite knowledge and circumvent the need for expensive simulations. The conservation of robustness with respect to nontrivial symmetries including the interchange of strongly connected components and permutation within strongly connected components suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may help to characterize a fundamental evolutionary constraint \cite{Golubitsky2006}.
 
-The fact that such a relationship exists has the potential to unify our understanding of biological networks. In order to pursue this, it will be necessary to deepen our understanding of the relationship between dynamical robustness and the underlying network topology. One approach is to attempt to compute robustness for systems of larger size. Using existing methods, this would require large-scale Monte Carlo simulations. However, it may be possible to prove a bound on the robustness of individual strongly connected components, which could provide more definite knowledge and help to circumvent such expensive simulations. Nevertheless, the conservation of robustness with respect to nontrivial symmetries including the interchange of strongly connected components and permutation within strongly connected components suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may help to characterize a fundamental evolutionary constraint \cite{Golubitsky2006}.
+The relationship between structure and function is fundamental to networks at every level of the biological hierarchy. Equally fundamental is the ability of systems to persist over long periods of time, which is dependent upon their dynamical robustness. Here we have demonstrated a structure-function relationship wherein biological networks that are more hierarchical are more robust and thus more likely to persist in the evolutionary process.
+%Moreover, this result is formulated at a level of abstraction that allows its conclusions to apply independently to each of these levels.
