use SCC acroynym

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -7,7 +7,7 @@ In the long term, this prediction may be evaluated using experimental evolution 
 %The fact that such a relationship exists has the potential to unify our understanding of biological networks.
 In order to further this work from a theoretical perspective, it will be necessary to deepen our understanding of the relationship between dynamical robustness and the underlying network topology.
 %One approach is to attempt to compute robustness for systems of larger size. Using existing methods, this would require large-scale Monte Carlo simulations. However,
-It may be possible to prove a bound on the robustness of individual strongly connected components, which could provide more definite knowledge and circumvent the need for expensive simulations. The conservation of robustness with respect to nontrivial symmetries including the interchange of strongly connected components and permutation within strongly connected components suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may help to characterize a fundamental evolutionary constraint \cite{Golubitsky2006}.
+It may be possible to prove a bound on the robustness of individual SCCs, which could provide more definite knowledge and circumvent the need for expensive simulations. The conservation of robustness with respect to nontrivial symmetries including the interchange of SCCs and permutation within SCCs suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may help to characterize a fundamental evolutionary constraint \cite{Golubitsky2006}.
 
 The relationship between structure and function is fundamental to networks at every level of the biological hierarchy. Equally fundamental is the ability of systems to persist over long periods of time, which is dependent upon their dynamical robustness. Here we have demonstrated a structure-function relationship wherein biological networks that are more hierarchical are more robust and thus more likely to persist in the evolutionary process.
 %Moreover, this result is formulated at a level of abstraction that allows its conclusions to apply independently to each of these levels.
