comment sentences from supplement moved to main text

--- a/tex/supplement.tex
+++ b/tex/supplement.tex
@@ -394,10 +394,5 @@ ordering, $G_{\mathrm{tot}}$, which also possess the highest degree of
 hierarchy. The fact that robustness is equivalent for any configuration
 of strongly connected components with an equivalent number of links
 between them demonstrates that it is invariant to permutations of
-strongly connected components. This result does not depend at all upon
-any particular details such as the probability distribution from which
-the component interaction strengths are sampled because the arguments
-presented here are purely topological in nature. The result that
-dynamical robustness is correlated with system hierarchy therefore
-applies to an even broader class of dynamical systems than the particular
-random ensembles primarily studied here.
+strongly connected components.
+% This result does not depend at all uponany particular details such as the probability distribution from which the component interaction strengths are sampled because the arguments presented here are purely topological in nature. The result that dynamical robustness is correlated with system hierarchy therefore applies to an even broader class of dynamical systems than the particular random ensembles primarily studied here.
