update main text

--- a/tex/table2x2stab.tex
+++ b/tex/table2x2stab.tex
@@ -32,5 +32,5 @@ a & 0 \\
 \end{pmatrix}$ & 2 & 0.5 & 0.25 \\
 \end{tabular}
 \end{center}
-\caption{{\bf Probability of stability under resampling and \emph{a priori} stability for two component systems derived analytically}. All matrices not listed have $0$ probability of stability.}\label{tab:structstabmat}
+\caption{{\bf Probability of stability under resampling and \emph{a priori} stability for two variable systems derived analytically}. All matrices not listed have $0$ probability of stability.}\label{tab:structstabmat}
 \end{table}
