--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -3,7 +3,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.9\columnwidth]{fig/biomodelexamples.pdf}
-\caption{{\bf Dynamical models in systems biology.} The top row represents a chemical reaction network (CRN) \cite{Shinar2010}, a gene regulatory network (GRN) \cite{Karlebach2008}, and an ecological regulatory network (ERN) \cite{Rohr2014} in terms of the graphical methods specific to each field mapped into the interaction graph, which provides a unified representation for networks across these fields. The second row represents a particular example of a system of differential equations that are used to model a biological network within each of the domains of application considered here \cite{Shinar2010,Karlebach2008,Shinar2010}. The third row shows the general form of a system of differential equations that can be used to model any network architecture of any size within each of the three domains of application exemplified here.}
+\caption{{\bf Dynamical models in systems biology.} The top row represents a chemical reaction network (CRN) \cite{Shinar2010}, a gene regulatory network (GRN) \cite{Karlebach2008}, and an ecological regulatory network (ERN) \cite{Rohr2014} in terms of the graphical methods specific to each field mapped into the interaction graph, which provides a unified representation for networks across these fields. The second row represents a particular example of a system of differential equations that are used to model a biological network within each of the domains of application considered here. The third row shows the general form of a system of differential equations that can be used to model any network architecture within each domain.}
 \label{fig:biomodelexamples}
 \end{figure}
 
@@ -12,7 +12,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.9\columnwidth]{fig/modsccsym.pdf}
-\caption{{\bf Open systems, strongly connected components and symmetries of robustness.} (A) Example of the combination of open system modules to construct closed systems. (B) strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three component systems. The most hierarchical system in the top panel has the highest possible number of connected components, three, whereas the system in the bottom panel containing a single cycle and therefore posessing no hierarchy contains only one connected component. The two panels in the middle represent examples of hierarchical modular systems that posess both modularity and hierarchy. (C) Symmetries of the $\hier$ transformation between graphs and SCCs. The transformation a represents an interchange of SCCs, b moving a link between nodes in a component and c adding a link. All three transformations represent symmetries of the $\hier$ transformation from graphs to SCCs while only a and b are symmetries of robustness.}
+\caption{{\bf Open systems, strongly connected components and symmetries of robustness.} (A) Example of the combination of open system modules to construct closed systems. (B) SCCs highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three variable systems. The most hierarchical network, top panel, is the one that maximizes the number of SCCs and the number of links between them. We therefore define hierarchy as $max(\hbox{ED}) - \hbox{ED}$ where ED is the edit distance representing the number of link addition/deletion operations necessary to transform a given graph into the most hierarchical one. The two panels in the middle represent examples of hierarchical modular systems that posess both modularity (i.e. SCCs with more than one variable) and hierarchy. (C) Symmetries of the $\hier$ transformation between graphs and SCCs. The transformation $a$ represents an interchange of SCCs, $b$ moving a link between nodes in a component and $c$ adding a link. All three transformations represent symmetries of the $\hier$ transformation from graphs to SCCs while only $a$ and $b$ are symmetries of robustness.}
 \label{fig:modsccsym}
 \end{figure}
 
@@ -40,7 +40,7 @@
 % \begin{figure}[!ht]
 % \centering
 % \noindent\includegraphics[width=0.4\columnwidth]{fig/scc2.pdf}
-% \caption{{\bf Example of strongly connected components.} (A) - (D) show strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three component systems. Note that the most hierarchical system in (A) has the highest possible number of connected components, three, whereas the system containing a single cycle and therefore posessing no hierarchy contains only one connected component. Systems (B) and (C) represent examples of hierarchical modular systems that posess both modularity and hierarchy.}
+% \caption{{\bf Example of strongly connected components.} (A) - (D) show strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three variable systems. Note that the most hierarchical system in (A) has the highest possible number of connected components, three, whereas the system containing a single cycle and therefore posessing no hierarchy contains only one connected component. Systems (B) and (C) represent examples of hierarchical modular systems that posess both modularity and hierarchy.}
 % \label{fig:scc}
 % \end{figure}
 
@@ -49,7 +49,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=1.0\columnwidth]{fig/combinedfigs.pdf}
-\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Robustness versus connectivity, (B) robustness versus hierarchy, (C) Robustness versus number of cycles and connectivity for three component systems. Each point represents the average robustness of all graphs having a given number of cycles and connectivity. (D) Robustness versus hierarchy and connectivity for three component systems. Each point represents the average robustness of all graphs having a given hierarchy and connectivity.
+\caption{{\bf Characterization of stability and robustness according to properties of system structure for three variable systems} (A) Robustness versus connectivity. The red colored points represent averages for each connectivity. The lowest and highest robustness network architectures are labelled. Other network architectures are shown in \ref{tab:structstabmat3}. (B) Robustness versus hierarchy. (C) Number of cycles and (D) hierarchy vs connectivity and robustness. The color of each point represents the average robustness of all graphs having the parameters specified on the $x$ and $y$ axes.
 }
 \label{fig:combined}
 \end{figure}
@@ -59,7 +59,7 @@
 % \begin{figure}[!ht]
 % \centering
 % \noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
-% \caption{{\bf Robustness versus number of cycles and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given number of cycles and connectivity.}
+% \caption{{\bf Robustness versus number of cycles and connectivity for three variable systems.} Each point represents the average robustness of all graphs having a given number of cycles and connectivity.}
 % \label{fig:connectcycle3D3x3}
 % \end{figure}
 
@@ -68,7 +68,7 @@
 % \begin{figure}[!ht]
 % \centering
 % \noindent\includegraphics[width=0.8\columnwidth]{fig/connectdist3D3x3.pdf}
-% \caption{{\bf Robustness versus hierarchy and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given hierarchy and connectivity.}
+% \caption{{\bf Robustness versus hierarchy and connectivity for three variable systems.} Each point represents the average robustness of all graphs having a given hierarchy and connectivity.}
 % \label{fig:connectdist3D3x3}
 % \end{figure}
 
