--- a/header.tex
+++ b/header.tex
@@ -221,7 +221,7 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\adj{\mathrm{adj}}
 \def\wprod{\mathbf{wp}}
 \def\length{\mathbf{len}}
-\def\connectivity{\mathrm{d}}
+\def\connectivity{d}
 \def\reffigexamplesystemmodules{\ref{fig:modsccsym}A}
 \def\reffigscc{\ref{fig:modsccsym}B}
 \def\reffighiertransformations{\ref{fig:modsccsym}C}
