modify tables and imported packages to work with revtex

--- a/header.tex
+++ b/header.tex
@@ -9,9 +9,9 @@
 % latex plos.template
 % dvipdf plos.template
 
-\documentclass[10pt]{article}
-%\documentclass[aps,twocolumn]{revtex4-1}
-%\documentclass[aps,twocolumn]{article}
+% \documentclass[10pt]{article}
+\documentclass[aps,twocolumn]{revtex4-1}
+% \documentclass[aps,twocolumn]{article}
 % \usepackage{multicol}
 
 % amsmath package, useful for mathematical formulas
@@ -25,7 +25,7 @@
 \usepackage{graphicx}
 
 % cite package, to clean up citations in the main text. Do not remove.
-\usepackage{cite}
+% \usepackage{cite}
 
 \usepackage{color}
 
@@ -34,15 +34,15 @@
 %\doublespacing
 
 % Text layout
-\topmargin 0.0cm
-\oddsidemargin 0.5cm
-\evensidemargin 0.5cm
-\textwidth 16cm
-\textheight 21cm
+% \topmargin 0.0cm
+% \oddsidemargin 0.5cm
+% \evensidemargin 0.5cm
+% \textwidth 16cm
+% \textheight 21cm
 
 % Bold the 'Figure #' in the caption and separate it with a period
 % Captions will be left justified
-\usepackage[labelfont=bf,labelsep=period,justification=raggedright]{caption}
+% \usepackage[labelfont=bf,labelsep=period,justification=raggedright]{caption}
 
 % Remove brackets from numbering in List of References
 \makeatletter
@@ -60,7 +60,7 @@
 % xy-pic for diagrams
 \usepackage[all]{xy}
 % subcaption
-\usepackage{subcaption}
+% \usepackage{subcaption}
 % hyperref
 %\usepackage[linkbordercolor={.67 .27 .27},citebordercolor={.09 .29 .54},urlbordercolor={.09 .29 .54}]{hyperref}
 \usepackage{hyperref}
