move supplement to main text

--- a/paper.tex
+++ b/paper.tex
@@ -76,13 +76,16 @@ The analysis of dynamical systems that attempts to model chemical reaction, gene
 % \listoftodos
 % \tableofcontents
 
-% \section{Introduction}
+\section{Introduction}
 \input{tex/introduction}
 
 % \section{Results}
 \input{tex/results}
 
-% \section{Discussion}
+\section{Results}
+\input{tex/supplement}
+
+\section{Discussion}
 \input{tex/discussion}
 
 \section{Acknowlegements}
@@ -109,9 +112,9 @@ The analysis of dynamical systems that attempts to model chemical reaction, gene
 
 \beginsupplement
 \setcounter{secnumdepth}{4}
-\section{Supplementary Material}
+% \section{Supplementary Material}
 
-\input{tex/supplement}
+% \input{tex/supplement}
 
 {\footnotesize
 % \bibliographystyle{naturemag}
